# internshipCodes2-UpdatedBirch

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml  run_birch.py
A-BIRCH-Results/: ANALYSIS_REPORT.md  FEATURE_SET.txt  run_index.csv
A-BIRCH-Results-Without-PW/: ANALYSIS_REPORT.md  FEATURE_SET.txt  run_index.csv
A-BIRCH-Results-Without-PW/s1_5d/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results-Without-PW/s2_5d/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results-Without-PW/s5_5d/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results-Without-PW/s6_5d/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results-Without-PW/two_emitter_pdw/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results/s1_5d/: birch_results.csv  birch_validation_report.txt  confusion_matrix.csv
A-BIRCH-Results/s2_5d/: birch_results.csv  birch_validation_report.txt  (+1 more)
Birch-Implementation/: BIRCH.cpp  BIRCH.h  CMakeLists.txt  Common.cpp  Common.h  Dataset.cpp  Dataset.h  KNNOutlier.cpp  KNNOutlier.h  PAPER_ALIGNMENT.md  Pipeline.cpp  Pipeline.h  README.md  Validation.cpp  Validation.h  improved_validation_report.txt  main.cpp
DB/: README.md  db.cpp  db_corrected
Datasets/: s1_5d.csv  s2_5d.csv  s5_5d.csv  s6_5d.csv  two_emitter_pdw_dataset.csv  two_emitter_pdw_labeled.csv
MBD-BIRCH-Results/: ANALYSIS_REPORT.md  run_index.csv
Results/: ANALYSIS_REPORT.md  run_index.csv
SD/: README.md  sd  sd.cpp
(+48 files in other folders)
